--- a/index.html
+++ b/index.html
@@ -14,5 +14,15 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <div id="app">
+      <main>
+        <div class="main-container">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error atque pariatur hic nisi. Quam, ab minima! Commodi nesciunt, nulla laborum voluptas fuga dignissimos, suscipit atque dolorem totam, quas ipsa ad!</div>
+      </main>
+
+      <aside>
+        <div class="aside-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo omnis aut voluptatem veniam doloribus culpa nostrum itaque! Fugiat, veritatis deleniti, sunt at, rem nesciunt aspernatur ipsam ea voluptates ex est?</div>
+      </aside>
+    </div>
+  </body>
 </html>
