--- a/index.html
+++ b/index.html
@@ -17,11 +17,32 @@
   <body>
     <div id="app">
       <main>
-        <div class="main-container">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error atque pariatur hic nisi. Quam, ab minima! Commodi nesciunt, nulla laborum voluptas fuga dignissimos, suscipit atque dolorem totam, quas ipsa ad!</div>
+        <div class="main-container">
+          <div id="back">
+            <img src="assets/icons/arrow-left-02.svg" alt="icone de voltar" />
+            <span>Voltar</span>
+          </div>
+
+          <h1>Formulario de Matricula</h1>
+          <p>
+            Preencha os dados abaixo para matricular seu filho na escola de
+            educação infantil Estrelas do Amanhã.
+          </p>
+        </div>
       </main>
 
       <aside>
-        <div class="aside-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo omnis aut voluptatem veniam doloribus culpa nostrum itaque! Fugiat, veritatis deleniti, sunt at, rem nesciunt aspernatur ipsam ea voluptates ex est?</div>
+        <div class="aside-container">
+          <header>
+            <img src="assets/logo.svg" alt="logo estreasas do amanha" />
+            <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
+            <p>
+              Inscreva seu filho em nossa escola e veja-o florescer em um
+              ambiente acolhedor, seguro e estimulante.
+            </p>
+          </header>
+          <img src="assets/Illustration.svg" alt="professoras com criancas prestando atencao" />
+        </div>
       </aside>
     </div>
   </body>
