--- a/index.html
+++ b/index.html
@@ -163,6 +163,32 @@
                 <span>Insira e-mail valido</span>
               </div>
             </fieldset>
+
+            <fieldset class="enroll-options">
+              <legend>Opcoes de Matricula</legend>
+
+              <div class="input-wrapper">
+                <label for="">Selecione o Turno de Estudo</label>
+                <div class="radio-wrapper">
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" name="study-shift" value="morning" id="morning">
+                    <img src="assets/icons/sun-cloud-02.svg" alt=" imagem sol com nuvem">
+                    <label for="morning">Manha</label>
+
+                  </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" name="study-shift" value="evening" id="evening">
+                    <img src="assets/icons/sun-02.svg" alt=" imagem sol com nuvem">
+                    <label for="evening">Tarde</label>
+
+                  </div>
+                </div>
+              </div>
+
+            </fieldset>
           </form>
         </div>
       </main>
