--- a/index.html
+++ b/index.html
@@ -172,22 +172,85 @@
                 <div class="radio-wrapper">
                   <div class="radio-inner">
                     <div class="radio-image"></div>
-                    <input type="radio" name="study-shift" value="morning" id="morning">
-                    <img src="assets/icons/sun-cloud-02.svg" alt=" imagem sol com nuvem">
+                    <input
+                      type="radio"
+                      name="study-shift"
+                      value="morning"
+                      id="morning"
+                    />
+                    <img
+                      src="assets/icons/sun-cloud-02.svg"
+                      alt=" imagem sol com nuvem"
+                    />
                     <label for="morning">Manha</label>
-
                   </div>
 
                   <div class="radio-inner">
                     <div class="radio-image"></div>
-                    <input type="radio" name="study-shift" value="evening" id="evening">
-                    <img src="assets/icons/sun-02.svg" alt=" imagem sol com nuvem">
+                    <input
+                      type="radio"
+                      name="study-shift"
+                      value="evening"
+                      id="evening"
+                    />
+                    <img
+                      src="assets/icons/sun-02.svg"
+                      alt=" imagem sol com nuvem"
+                    />
                     <label for="evening">Tarde</label>
-
                   </div>
                 </div>
               </div>
 
+              <div class="input-wrapper">
+                <label
+                  >Em qual esporte você gostaria de inscrever seu filho?</label
+                >
+                <div class="radio-wrapper">
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" name="sport" id="football" />
+                    <img src="assets/icons/football.svg" alt="" />
+                    <label for="football">Futebol</label>
+                  </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" name="sport" id="basketball-02" />
+                    <img src="assets/icons/basketball-02.svg" alt="" />
+                    <label for="basketball-02">Basquete</label>
+                  </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" name="sport" id="swimming" />
+                    <img src="assets/icons/swimming.svg" alt="" />
+                    <label for="swimming">Natacao</label>
+                  </div>
+
+                   <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" name="sport" id="yoga" />
+                    <img src="assets/icons/yoga-02.svg" alt="" />
+                    <label for="yoga">Yoga</label>
+                  </div>
+
+                   <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" name="sport" id="volley" />
+                    <img src="assets/icons/volleyball.svg" alt="" />
+                    <label for="volley">Volei</label>
+                  </div>
+
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" name="sport" id="boxing" />
+                    <img src="assets/icons/boxing-glove-01.svg" alt="" />
+                    <label for="boxing">Box</label>
+                  </div>
+
+                </div>
+              </div>
             </fieldset>
           </form>
         </div>
