--- a/index.html
+++ b/index.html
@@ -228,14 +228,14 @@
                     <label for="swimming">Natacao</label>
                   </div>
 
-                   <div class="radio-inner">
+                  <div class="radio-inner">
                     <div class="radio-image"></div>
                     <input type="radio" name="sport" id="yoga" />
                     <img src="assets/icons/yoga-02.svg" alt="" />
                     <label for="yoga">Yoga</label>
                   </div>
 
-                   <div class="radio-inner">
+                  <div class="radio-inner">
                     <div class="radio-image"></div>
                     <input type="radio" name="sport" id="volley" />
                     <img src="assets/icons/volleyball.svg" alt="" />
@@ -248,10 +248,24 @@
                     <img src="assets/icons/boxing-glove-01.svg" alt="" />
                     <label for="boxing">Box</label>
                   </div>
-
                 </div>
               </div>
             </fieldset>
+
+            <div class="terms-wrapper input-wrapper checkbox-wrapper">
+              <div class="checkbox-image"></div>
+              <input type="checkbox" name="terms" id="terms" />
+              <label for="terms">Declaro que li e concordo com os
+                <strong>Termos e Condições</strong> e com a
+                <strong>Política de Privacidade</strong> da escola Estrela do
+                Amanhã.
+              </label>
+            </div>
+
+            <div class="actions-wrapper">
+              <button class="btn-secondary" type="button">Salvar respostas</button>
+              <button class="btn-primary" type="submit">Fazer Matricula</button>
+            </div>
           </form>
         </div>
       </main>
