Projeto moficiado para responsivo. Atividade do Curso.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               </div>
 
               <div class="input-wrapper">
-                <laber for="">Data de Nascimento</laber>
+                <label for="">Data de Nascimento</label>
                 <input type="date" id="birth" name="birth" lang="pt-BR" />
               </div>
 
@@ -57,12 +57,12 @@
               </div>
 
               <div class="textarea-wrapper">
-                <label for="medical-info">Informacao Medicas</label>
+                <label for="medica-info">Informacao Medicas</label>
                 <textarea
                   name="medica-info"
                   id="medical-info"
                   cols="30"
-                  rows="6"
+                  rows="4"
                   placeholder="A crianca possui alguma condicao mefica que a escola deva estar ciente?"
                 ></textarea>
               </div>
@@ -71,7 +71,7 @@
                 <label for="birth-file">Certidao de Nascimento</label>
 
                 <div class="dropzone">
-                  <input type="file" id="birth-file" name="bith-file" />
+                  <input type="file" id="birth-file" name="birth-file" />
                   <img src="assets/icons/cloud-upload.svg" alt="" />
                   <p>
                     Clique aqui para <br />
